Fri Feb 18, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
	* Default map (when not specified) is now "37" instead of "en".

Thu Feb 17, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
	* Replaced ASDB.dtd with Gomez Henri's ASDB.dtd, which passes xml
	  validation tests.
	* Added ASDB.xsl provided by Elias Mandouval.
	* Added <?xml-stylsheet ... ?> header to produced XML.

Tue Feb 15, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
	* Forgot to put quotes around value in RECLEN= for LAYOUT tag.

Fri Feb 11, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
	* Fix so that will compile without 0.15.7, fixed configure so that
	  library *and supporting libraries* will be detected properly
	  (may be necessary for some non-Linux systems).
	* Use FTP's `R' (record) structure transfer mode so that we only
	  have to make a guess about LRL which is >= end of last field we
	  need.

Thu Feb 10, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>	
	* Clean up -l5250 translation map handling to work with tn5250 >=
	  0.15.7
	* Add asdb2tab perl script to distribution.  Add autogen.sh to CVS.
	* Released v0.2

Wed Feb  9, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
	* Password can now be specified by using ASDBGET_PASSWORD environment
	  variable, or asdbget will prompt otherwise.
	* XML_putc: '\'' => &apos;
	* Quote XML attribute values, expat, and therefore XML::Parser, do
	  not like the XML otherwise.
	* Patch for handling 'Z' (timestamp) fields from Gomez Henri, including
	  support in ASDB.dtd for specifying Z as field type.
	* Patch for using lib5250 for character conversion from Gomez Henri,
	  some clean up to dectect whether or not we have -l5250 at configure
	  time.  Currently does not detect newer (CVS) versions of lib5250.
	* Produce warning and still read response when last record is an
	  incomplete length.

Sun Dec 12, 1999  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
	* Written.