@@ -1,5 +1,7 @@
 Fri Feb 18, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
 	* Default map (when not specified) is now "37" instead of "en".
+	* If map is invalid, show syntax and exit.
+	* Add list of maps to syntax message.
 
 Thu Feb 17, 2000  Jay 'Eraserhead' Felice <jasonf@cleveland.lug.net>
 	* Replaced ASDB.dtd with Gomez Henri's ASDB.dtd, which passes xml
